syntax = "proto3";
package signer;

message PublicKeyRequest {
    map<string, string> identities = 1;
    string authority = 2;
}

message PublicKeyResponse {
    bytes public_key = 3;
}

message SignRequest {
    map<string, string> identities = 1;
    string tbs_certificate = 2;
}

message SignResponse {
    bytes certificate = 3;
}

service Signer {
    rpc PublicKey(PublicKeyRequest) returns (PublicKeyResponse);
    rpc Sign(SignRequest) returns (SignResponse);
}